--- a/assets/transition/list.css
+++ b/assets/transition/list.css
@@ -1,18 +1,17 @@
-.list-item {
-    display: inline-block;
-    margin-right: 10px;
-}
-
+.list-move,
+/* apply transition to moving elements */
 .list-enter-active,
 .list-leave-active {
-    transition: all 1s;
+    transition: all 0.5s ease;
 }
 
 .list-enter,
-.list-leave-to
-
-/* .list-leave-active below version 2.1.8 */
-    {
+.list-leave-to {
     opacity: 0;
-    transform: translateY(30px);
+}
+
+/* ensure leaving items are taken out of layout flow so that moving
+   animations can be calculated correctly. */
+.list-leave-active {
+    position: absolute;
 }
